--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pixyz==0.3.1
-pandas==1.1.2
-torchvision==0.7.0
-tqdm==4.50.0
-torch==1.6.0
-numpy==1.17.4
-matplotlib==3.1.2
-Pillow==8.1.0
-pyclustering==0.10.1.2
-tensorboardX==2.1
+pixyz
+pandas
+torchvision
+tqdm
+torch
+numpy
+matplotlib
+Pillow
+pyclustering
+tensorboardX
