--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pixyz
-pandas
-torchvision
-tqdm
+pixyz>=0.3.1
 torch
-numpy
-matplotlib
-Pillow
-pyclustering
-tensorboardX
+pyclustering>=0.10.1.2
+matplotlib>=3.1.2
+tqdm>=4.50.0
+pandas>=1.1.2
+torchvision
+numpy>=1.17.4
+Pillow>=8.1.0
+tensorboardX>=2.1
